--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @theme {
   --font-display: "Sathoshi", "sans-sherif";
   --color-page: #eae8ff;
+  --color-header-black: #212529;
   --color-background: #2d3142;
   --color-uranian-blue: #b0d7ff;
   --color-dark-purple: #31081f;
