+ violet and lavendar cols

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,6 @@
   --color-background: #2d3142;
   --color-uranian-blue: #b0d7ff;
   --color-dark-purple: #31081f;
+  --color-violet: #574d68;
+  --color-lavender: #eae8ff;
 }
