--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --color-page: #eae8ff;
   --color-header-black: #212529;
   --color-background: #2d3142;
-  --color-uranian-blue: #b0d7ff;
+  --color-uranian-blue: #8baedb;
   --color-dark-purple: #31081f;
   --color-violet: #574d68;
   --color-lavender: #eae8ff;
